Moved Tokenization to Frontend

--- a/src/form.html
+++ b/src/form.html
@@ -1,14 +1,22 @@
-/* form.html */
 <!DOCTYPE html>
 <html>
-<head><title>Secure Form</title></head>
+<head>
+  <title>PII Submission Form</title>
+</head>
 <body>
-    <h2>Secure Web Form</h2>
-    <form method="POST" action="/submit">
-        <label>Name:</label><br><input name="name" /><br>
-        <label>Email:</label><br><input name="email" /><br>
-        <label>National ID:</label><br><input name="nid" /><br>
-        <button type="submit">Submit</button>
-    </form>
+  <h2>Submit PII (Locally Hashed)</h2>
+  <form id="piiForm">
+    <label>Name:</label><br />
+    <input type="text" id="name" required /><br />
+    <label>Email:</label><br />
+    <input type="email" id="email" required /><br />
+    <label>National ID:</label><br />
+    <input type="text" id="nid" required /><br /><br />
+    <button type="submit">Submit</button>
+  </form>
+
+  <div id="result"></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
