--- a/src/form.html
+++ b/src/form.html
@@ -17,6 +17,6 @@
 
   <div id="result"></div>
 
-  <script src="script.js"></script>
+  <script src="script.js" type="module"></script>
 </body>
 </html>
