--- a/src/audit.html
+++ b/src/audit.html
@@ -3,16 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <title>Audit Trail</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="audit.js" defer></script>
 </head>
-<body>
-  <h1>Blockchain Audit Trail</h1>
+<body class="bg-gray-100 min-h-screen p-6">
 
-  <input type="text" id="searchInput" placeholder="Search token...">
-  <button onclick="searchToken()">Search</button>
-  <p id="searchResult"></p>
+  <div class="max-w-3xl mx-auto bg-white shadow-lg rounded-xl p-8">
+    <!-- Title -->
+    <h1 class="text-3xl font-bold text-gray-800 mb-6 text-center">Blockchain Audit Trail</h1>
 
-  <h2>All Entries</h2>
-  <ul id="entriesList"></ul>
+    <!-- Search Section -->
+    <div class="flex flex-col md:flex-row items-center gap-4 mb-6">
+      <input type="text" id="searchInput" placeholder="Enter token to search..." class="flex-grow p-2 border rounded-lg shadow-sm focus:ring focus:ring-blue-300">
+      <button onclick="searchToken()" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 shadow"> Search </button>
+    </div>
+    <p id="searchResult" class="text-center text-gray-700 font-medium mb-8"></p>
+
+    <!-- Entries Section -->
+    <h2 class="text-xl font-semibold text-gray-800 mb-4">All Entries</h2>
+    <div class="overflow-x-auto">
+      <table class="min-w-full border border-gray-300 rounded-lg shadow-sm">
+        <thead class="bg-gray-200">
+          <tr>
+            <th class="px-4 py-2 border text-left">Token</th>
+            <th class="px-4 py-2 border text-left">Timestamp</th>
+          </tr>
+        </thead>
+        <tbody id="entriesList" class="divide-y divide-gray-200">
+          <!-- audit.js will populate here -->
+        </tbody>
+      </table>
+    </div>
+  </div>
+
 </body>
 </html>
