--- a/src/verify.html
+++ b/src/verify.html
@@ -2,19 +2,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Verify Token</title>
   <script src="verify.js" defer></script>
 </head>
-<body>
-  <h2>Verify Your Submission</h2>
-  <form id="verifyForm">
-    <label for="token">Enter Your Token (SHA-256):</label><br/>
-    <input type="text" id="token" name="token" required style="width: 400px;"/><br/><br/>
-    <button type="submit">Verify</button>
-  </form>
 
-  <div id="result" style="margin-top: 20px;"></div>
+<body class="bg-gray-100 min-h-screen flex items-center justify-center p-6">
+  <div class="bg-white shadow-lg rounded-xl p-8 w-full max-w-md">
+  <h2 class="text-2xl font-semibold text-gray-800 mb-6 text-center">Verify Your Submission</h2>
+  <form id="verifyForm">
+    <label for="token" class="block mb-2 font-medium text-gray-700">Enter Your Token (SHA-256):</label><br/>
+    <input type="text" id="token" name="token" required  class="w-full p-2 border rounded-lg mb-6 focus:ring focus:ring-green-300"/><br/><br/>
+    <button type="submit" class="w-full bg-green-600 text-white py-2 rounded-lg hover:bg-green-700">Verify</button>
+  </form>
+  <div id="result" class="bg-white shadow-lg rounded-xl p-8 w-full max-w-md"></div>
+  </div>
 </body>
 </html>
